--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	p.header {
 		font-size: 1.6em !important;
 		font-weight: bold !important;
+		margin-bottom: 20px;
 	}
 
 	.videoWrapper {
@@ -52,21 +53,21 @@
 		<div id="everything">
 			<header id="header">
 
-				<br>
-				<br>
-
-
 				<p class="header">Impact Evaluation Foundation</p>
 
-				<p><strong>Does exactly what says on the tin.</strong></p>
+				<p><strong>Does exactly what says on the tin :)</strong></p>
 
-				<p>One door closing, another door opening. After painful rejection from #GG20 the <a href="https://basex.com">basex.com</a> was put temporarily on hold. Repurposing setback into an opportunity to envision a new approach towards measuring impact, externalities, cobenefits.</p>
+				<p>Envisioning a new approach towards measuring impact, externalities, cobenefits.</p>
 
-				<p>Bottom line: we need to measure full cost of the products, goods, services. Meat is too cheap. Energy is too cheap. The real cost is outsourced to nature, vulnerable communities, future generations.</p>
+				<p>We need to account for the full cost of the products, goods, services. Meat is too cheap. Energy is too cheap. The real cost is outsourced to nature, vulnerable communities, future generations. Currently free market is captured by subsidies and regulation, loads of stuff is artificially too cheap as it doesn't take into account the full cost that is externalised elsewhere.</p>
 
-				<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Recognizing the challenges many projects in the regenerative finance (ReFi) space face in effectively reporting their ecological impact, this proposal seeks to introduce an on-chain ecological impact verifier training program and reputation model, anchored around the Ecological…</p>&mdash; Daniel (@DanielofAnu) <a href="https://twitter.com/DanielofAnu/status/1787451027878293837?ref_src=twsrc%5Etfw">May 6, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<p>Our first initiative is to build an educational programme for impact evaluators "on the ground". Not flying fancy experts to measure CO2 and eco / bio / regen / organic / fair trade practices, but local person $10 per hour with mobile phone and internet, much faster, much cheaper, much more scalable. Tapping into Web3 technologies: attestations, proof of location, reputation, dispute resolution, token engineering, game theory. We are determined to win, we are the change that needs to happen in the world.</p>
 
-				<p>Basic placeholder website. More to come soon. Join our Telegram working group: <a href="https://t.me/ImpactEval">t.me/ImpactEval</a></p>
+				<blockquote class="twitter-tweet"><p lang="en" dir="ltr">3. Program Structure<br><br>The program should be tailored to integrate reputation management with EBF-focused training:<br><br>Module 1: Introduction to EBF and the Importance of Reputation in Impact Verification<br><br>- Overview of the Ecological Benefits Framework and its importance in…</p>&mdash; Daniel (@DanielofAnu) <a href="https://twitter.com/DanielofAnu/status/1787453077819195551?ref_src=twsrc%5Etfw">May 6, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+				<p>Join our Telegram working group: <a href="https://t.me/ImpactEval">t.me/ImpactEval</a></p>
+
+				<p>Partners we would love to see and co-create together: DeReSy, Karma GAP, GainForest, OpenForestProtocol, KokoDAO, Silvi Protocol, Let's grow DAO, Nature Tech Collective, Celo, everyone who contributes towards impact evaluation. Please suggest people and organisations we should reach out to...</p>
 
 				<p>For now you can check our historical content about <a href="https://basex.notion.site/Carbon-Credit-Markets-94abec41f8b34a2889cafd3fbc84c76c?pvs=4">carbon credit standards</a>, <a href="https://basex.notion.site/Statement-on-carbon-offsetting-97314bf03969419381ef60134f43377b?pvs=4">offseting</a>, <a href="https://basex.notion.site/Statement-on-recycling-f7ca825519a04b9e9a843db8b3e1c421?pvs=4">recycling</a>, <a href="https://basex.notion.site/Statement-on-blockchain-crypto-Ethereum-Bitcoin-09266da877a443948887ecde702139e1?pvs=4">energy use</a>... We enjoy rabbit holes, hacker mindset, thinking like an adversary, digging to the bottom of things. </p>
 			
