--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 -->
 <html>
 	<head>
-		<title>Impact Evaluation Foundation (not BaseX)</title>
+		<title>Impact Evaluation Foundation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<meta property="og:title" content="Impact Evaluation Foundation"/>
-		<meta property="og:image" content="https://basex.com/preview.png"/>
-		<meta property="og:site_name" content="BaseX - new definition of value"/>
-		<meta property="og:description" content="Triple bottom line. People. Planet. Prosperity. Beyond GDP. Architecting a New World. Operating System for the Planet(s)"/>
+		<meta property="og:image" content="https://impactevaluation.foundation/preview.jpg"/>
+		<!-- <meta property="og:site_name" content="BaseX - new definition of value"/>
+		<meta property="og:description" content="Triple bottom line. People. Planet. Prosperity. Beyond GDP. Architecting a New World. Operating System for the Planet(s)"/> -->
 	
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@basexHQ">
 		<meta name="twitter:creator" content="@marsXrobertson">
 		<meta name="twitter:title" content="Impact Evaluation Foundation">
-		<meta name="twitter:description" content="Triple bottom line. People. Planet. Prosperity. Beyond GDP. Architecting a New World. Operating System for the Planet(s)">
-		<meta name="twitter:image" content="https://basex.com/preview.png">
+		<!-- <meta name="twitter:description" content="Triple bottom line. People. Planet. Prosperity. Beyond GDP. Architecting a New World. Operating System for the Planet(s)">
+		<meta name="twitter:image" content="https://basex.com/preview.png"> -->
 <style>
 	p.header {
 		font-size: 1.6em !important;
