--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<meta property="og:title" content="Impact Evaluation Foundation"/>
-		<meta property="og:image" content="https://impactevaluation.foundation/preview.jpg"/>
+		<meta property="og:image" content="preview.jpg"/>
 		<!-- <meta property="og:site_name" content="BaseX - new definition of value"/>
 		<meta property="og:description" content="Triple bottom line. People. Planet. Prosperity. Beyond GDP. Architecting a New World. Operating System for the Planet(s)"/> -->
 	
@@ -20,8 +20,8 @@
 		<meta name="twitter:site" content="@basexHQ">
 		<meta name="twitter:creator" content="@marsXrobertson">
 		<meta name="twitter:title" content="Impact Evaluation Foundation">
-		<!-- <meta name="twitter:description" content="Triple bottom line. People. Planet. Prosperity. Beyond GDP. Architecting a New World. Operating System for the Planet(s)">
-		<meta name="twitter:image" content="https://basex.com/preview.png"> -->
+		<!-- <meta name="twitter:description" content="Triple bottom line. People. Planet. Prosperity. Beyond GDP. Architecting a New World. Operating System for the Planet(s)"> -->
+		<meta name="twitter:image" content="preview.jpg"> 
 <style>
 	p.header {
 		font-size: 1.6em !important;
@@ -53,23 +53,27 @@
 		<div id="everything">
 			<header id="header">
 
-				<p class="header">Impact Evaluation Foundation</p>
+				<p class="header">Impact Evaluation Foundation (IEF)</p>
 
-				<p><strong>Does exactly what says on the tin :)</strong></p>
+				<p>Collecting, organising, envisioning best practices towards measuring impact, externalities, cobenefits.</p>
 
-				<p>Envisioning a new approach towards measuring impact, externalities, cobenefits.</p>
-
-				<p>We need to account for the full cost of the products, goods, services. Meat is too cheap. Energy is too cheap. The real cost is outsourced to nature, vulnerable communities, future generations. Currently free market is captured by subsidies and regulation, loads of stuff is artificially too cheap as it doesn't take into account the full cost that is externalised elsewhere.</p>
-
-				<p>Our first initiative is to build an educational programme for impact evaluators "on the ground". Not flying fancy experts to measure CO2 and eco / bio / regen / organic / fair trade practices, but local person $10 per hour with mobile phone and internet, much faster, much cheaper, much more scalable. Tapping into Web3 technologies: attestations, proof of location, reputation, dispute resolution, token engineering, game theory. We are determined to win, we are the change that needs to happen in the world.</p>
-
-				<blockquote class="twitter-tweet"><p lang="en" dir="ltr">3. Program Structure<br><br>The program should be tailored to integrate reputation management with EBF-focused training:<br><br>Module 1: Introduction to EBF and the Importance of Reputation in Impact Verification<br><br>- Overview of the Ecological Benefits Framework and its importance in…</p>&mdash; Daniel (@DanielofAnu) <a href="https://twitter.com/DanielofAnu/status/1787453077819195551?ref_src=twsrc%5Etfw">May 6, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<p>Work in progress: <a href="https://impact-evaluation-foundation.super.site/">knowledge base on Notion</a> 🌱</p>
 
 				<p>Join our Telegram working group: <a href="https://t.me/ImpactEval">t.me/ImpactEval</a></p>
 
-				<p>Partners we would love to see and co-create together: DeReSy, Karma GAP, GainForest, OpenForestProtocol, KokoDAO, Silvi Protocol, Let's grow DAO, Nature Tech Collective, Celo, everyone who contributes towards impact evaluation. Please suggest people and organisations we should reach out to...</p>
+				<p>Why do we exist? Markets are not efficient as they do not account for the full cost of the products, goods, services. Meat is too cheap. Energy is too cheap. The real cost is externalised to nature, vulnerable communities, future generations.</p>
 
-				<p>For now you can check our historical content about <a href="https://basex.notion.site/Carbon-Credit-Markets-94abec41f8b34a2889cafd3fbc84c76c?pvs=4">carbon credit standards</a>, <a href="https://basex.notion.site/Statement-on-carbon-offsetting-97314bf03969419381ef60134f43377b?pvs=4">offseting</a>, <a href="https://basex.notion.site/Statement-on-recycling-f7ca825519a04b9e9a843db8b3e1c421?pvs=4">recycling</a>, <a href="https://basex.notion.site/Statement-on-blockchain-crypto-Ethereum-Bitcoin-09266da877a443948887ecde702139e1?pvs=4">energy use</a>... We enjoy rabbit holes, hacker mindset, thinking like an adversary, digging to the bottom of things. </p>
+				<p>Our first initiative is to build an educational programme for impact evaluators "on the ground". Not flying fancy experts to measure CO2 / eco / bio / organic / fair trade practices, but a local person with mobile phone and a new &quot;impast evaluator&quot; job title. Much faster, much cheaper, much more scalable. Leverating the full spectrum of Web3 technologies, something that wasn't possible before: attestations, proof of location, reputation, dispute resolution, token engineering, incentives, game theory.</p>
+
+				<blockquote class="twitter-tweet"><p lang="en" dir="ltr">This is how we started... During <a href="https://twitter.com/hashtag/LetsGROW?src=hash&amp;ref_src=twsrc%5Etfw">#LetsGROW</a> <a href="https://twitter.com/hashtag/GG20?src=hash&amp;ref_src=twsrc%5Etfw">#GG20</a> Twitter spaces 🌱<br><br>Super high alignment of vision. <a href="https://t.co/7kLRiSILO6">https://t.co/7kLRiSILO6</a></p>&mdash; Impact Evaluation Foundation (@ImpactEvalFound) <a href="https://twitter.com/ImpactEvalFound/status/1787857595308396801?ref_src=twsrc%5Etfw">May 7, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+				<p>Partners we would love to see and co-create together: DeReSy, Karma GAP, GainForest, OpenForestProtocol, KokoDAO, Kokonut Network, Silvi Protocol, Let's GROW DAO, Nature Tech Collective, Positive Blockchain, Celo, everyone else who works towards MRV (measurement, reporting, verification), impact evaluation, transparency, integrity and making sure we value things properly. </p>
+				
+				<p>We are collaborative, transparent, open-source, public good from the start... We encourate you to connect via Telegram, Twitter and email.</p>
+
+				<iframe src="https://paragraph.xyz/@impactevaluation/embed?minimal=true" width="480" height="45" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+
+				<p>The team behind IEF has been involved in the ecosystem for a while, as we are creating new content, here are some some historical research: <a href="https://basex.notion.site/Carbon-Credit-Markets-94abec41f8b34a2889cafd3fbc84c76c?pvs=4">carbon credit standards</a>, <a href="https://basex.notion.site/Statement-on-carbon-offsetting-97314bf03969419381ef60134f43377b?pvs=4">offseting</a>, <a href="https://basex.notion.site/Statement-on-recycling-f7ca825519a04b9e9a843db8b3e1c421?pvs=4">recycling</a>, <a href="https://basex.notion.site/Statement-on-blockchain-crypto-Ethereum-Bitcoin-09266da877a443948887ecde702139e1?pvs=4">energy use</a>...</p>
 			
 			</header>
 
@@ -79,9 +83,9 @@
 
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/ImpactEval" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
-					<li><a href="https://twitter.com/marsXRobertson" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="mailto:marsXRobertson@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://t.me/ImpactEval" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+					<li><a href="https://twitter.com/ImpactEvalFound" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="mailto:impactevaluationfoundation@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li><span class="copyleft">&copy;</span>Impact Evaluation Foundation</li>
