--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div id="everything">
 			<header id="header">
 
-				<p class="header">Impact Evaluation Foundation (IEF)</p>
+				<p class="header">Impact Evaluation Foundation</p>
 
 				<p>Collecting, organising, envisioning best practices towards measuring impact, externalities, cobenefits.</p>
 
@@ -63,13 +63,13 @@
 
 				<p>Why do we exist? Markets are not efficient as they do not account for the full cost of the products, goods, services. Meat is too cheap. Energy is too cheap. The real cost is externalised to nature, vulnerable communities, future generations.</p>
 
-				<p>Our first initiative is to build an educational programme for impact evaluators "on the ground". Not flying fancy experts to measure CO2 / eco / bio / organic / fair trade practices, but a local person with mobile phone and a new &quot;impast evaluator&quot; job title. Much faster, much cheaper, much more scalable. Leverating the full spectrum of Web3 technologies, something that wasn't possible before: attestations, proof of location, reputation, dispute resolution, token engineering, incentives, game theory.</p>
+				<p>Our first initiative is to build an educational programme for impact evaluators "on the ground". Not flying fancy experts to measure CO<sub>2</sub> / eco / bio / organic / fair trade practices, but a local person with mobile phone and a new job title &quot;impact evaluator&quot; . Much faster, much cheaper, much more scalable. Leverating the full spectrum of Web3 technologies, something that wasn't possible before: attestations, proof of location, reputation, dispute resolution, token engineering, incentives, game theory.</p>
 
 				<blockquote class="twitter-tweet"><p lang="en" dir="ltr">This is how we started... During <a href="https://twitter.com/hashtag/LetsGROW?src=hash&amp;ref_src=twsrc%5Etfw">#LetsGROW</a> <a href="https://twitter.com/hashtag/GG20?src=hash&amp;ref_src=twsrc%5Etfw">#GG20</a> Twitter spaces 🌱<br><br>Super high alignment of vision. <a href="https://t.co/7kLRiSILO6">https://t.co/7kLRiSILO6</a></p>&mdash; Impact Evaluation Foundation (@ImpactEvalFound) <a href="https://twitter.com/ImpactEvalFound/status/1787857595308396801?ref_src=twsrc%5Etfw">May 7, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-				<p>Partners we would love to see and co-create together: DeReSy, Karma GAP, GainForest, OpenForestProtocol, KokoDAO, Kokonut Network, Silvi Protocol, Let's GROW DAO, Nature Tech Collective, Positive Blockchain, Celo, everyone else who works towards MRV (measurement, reporting, verification), impact evaluation, transparency, integrity and making sure we value things properly. </p>
+				<p>Partners we would love to see and co-create together: <a href="https://deresy.xyz/">DeReSy</a>, <a href="https://gap.karmahq.xyz/">Karma GAP</a>, <a href="https://hypercerts.org/">Hypercerts</a>, <a href="https://www.gitcoin.co/">Gitcoin</a>, <a href="https://gainforest.earth/">GainForest</a>, <a href="https://www.openforestprotocol.org/">OpenForestProtocol</a>, <a href="https://nori.com/">Nori</a>, <a href="https://www.regen.network/">Regen Network</a>, <a href="https://www.refidao.com/">ReFi DAO</a>, <a href="https://kokodao.xyz/">Koko DAO</a>, <a href="https://kokonut.network/">Kokonut Network</a>, <a href="https://www.silvi.earth/">Silvi Protocol</a>, <a href="https://www.letsgrow.network/">Let's GROW DAO</a>, <a href="https://thetreegens.com/">Treegens</a>, <a href="https://www.naturetechcollective.org/">Nature Tech Collective</a>, <a href="https://positiveblockchain.io/">Positive Blockchain</a>, everyone else who works towards MRV (measurement, reporting, verification), impact evaluation, transparency, integrity and valuing things at their true cost.</p>
 				
-				<p>We are collaborative, transparent, open-source, public good from the start... We encourate you to connect via Telegram, Twitter and email.</p>
+				<p>We are collaborative, transparent, open-source, public good from the start... We encourage you to connect via Telegram <a href="https://t.me/ImpactEval">@impactEval</a>, Twitter <a href="https://twitter.com/ImpactEvalFound">@impactEvalFound</a> and email <a href="mailto:impactevaluationfoundation@gmail.com">impactevaluationfoundation@gmail.com</a></p>
 
 				<iframe src="https://paragraph.xyz/@impactevaluation/embed?minimal=true" width="480" height="45" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
 
