--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 				<iframe src="https://paragraph.xyz/@impactevaluation/embed?minimal=true" width="480" height="45" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
 
-				<p>The team behind IEF has been involved in the ecosystem for a while, as we are creating new content, here are some some historical research: <a href="https://basex.notion.site/Carbon-Credit-Markets-94abec41f8b34a2889cafd3fbc84c76c?pvs=4">carbon credit standards</a>, <a href="https://basex.notion.site/Statement-on-carbon-offsetting-97314bf03969419381ef60134f43377b?pvs=4">offseting</a>, <a href="https://basex.notion.site/Statement-on-recycling-f7ca825519a04b9e9a843db8b3e1c421?pvs=4">recycling</a>, <a href="https://basex.notion.site/Statement-on-blockchain-crypto-Ethereum-Bitcoin-09266da877a443948887ecde702139e1?pvs=4">energy use</a>...</p>
+				<p>The team behind IEF has been involved in the ecosystem for a while, as we are creating new content, here are some historical articles: <a href="https://basex.notion.site/Carbon-Credit-Markets-94abec41f8b34a2889cafd3fbc84c76c?pvs=4">carbon credit standards</a>, <a href="https://basex.notion.site/Statement-on-carbon-offsetting-97314bf03969419381ef60134f43377b?pvs=4">offseting</a>, <a href="https://basex.notion.site/Statement-on-recycling-f7ca825519a04b9e9a843db8b3e1c421?pvs=4">recycling</a>, <a href="https://basex.notion.site/Statement-on-blockchain-crypto-Ethereum-Bitcoin-09266da877a443948887ecde702139e1?pvs=4">energy use</a>...</p>
 			
 			</header>
 
