Removing controversial wording

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 				<p>Join our Telegram working group: <a href="https://t.me/ImpactEval">t.me/ImpactEval</a></p>
 
-				<p>Why do we exist? Markets are not efficient as they do not account for the full cost of the products, goods, services. Meat is too cheap. Energy is too cheap. The real cost is externalised to nature, vulnerable communities, future generations.</p>
+				<p>Why do we exist? Markets are not efficient as they do not account for the full cost of the products, goods, services. The real cost is externalised to nature, vulnerable communities, future generations.</p>
 
 				<p>Our first initiative is to build an educational programme for impact evaluators "on the ground". Not flying fancy experts to measure CO<sub>2</sub> / eco / bio / organic / fair trade practices, but a local person with mobile phone and a new job title &quot;impact evaluator&quot; . Much faster, much cheaper, much more scalable. Leverating the full spectrum of Web3 technologies, something that wasn't possible before: attestations, proof of location, reputation, dispute resolution, token engineering, incentives, game theory.</p>
 
