Cosmetics, small changes to the website

--- a/grant/index.html
+++ b/grant/index.html
@@ -18,5 +18,7 @@
  </head>
  <body>
 
+    <h1>Redirecting to the grant: <a href="https://explorer.gitcoin.co/#/round/42161/388/70">explorer.gitcoin.co/#/round/42161/388/70</a> </h1>
+
  </body>
 </html>
