--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 		margin-bottom: 20px;
 	}
 
+	p.important {
+		border: 2px solid white;
+		display: inline-block;
+		padding: 8px;
+	}
+
 	.videoWrapper {
 		position:relative;
 		padding-bottom:56.25%;
@@ -53,7 +59,7 @@
 		<div id="everything">
 			<header id="header">
 
-				<p class="header">Impact Evaluation Foundation</p>
+				<p class="header">Impact Evaluation Foundation (IEF)</p>
 
 				<p>Collecting, organising, envisioning best practices towards measuring impact, externalities, cobenefits.</p>
 
@@ -62,6 +68,8 @@
 				<p>Join our Telegram working group: <a href="https://t.me/ImpactEval">t.me/ImpactEval</a> 💬</p>
 
 				<p class="important">Support our GG21 grant: <a href="https://ImpactEvaluation.Foundation/grant">ImpactEvaluation.Foundation/grant</a> 💰</p>
+
+				<br>
 
 				<img style="max-width: 100%" src="images/cover-image.png">
 
@@ -86,6 +94,8 @@
 				<iframe src="https://paragraph.xyz/@impactevaluation/embed?minimal=true" width="480" style="max-width: 100%" height="45" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
 
 				<p>The team behind IEF has been involved in the ecosystem for a while, as we are creating new content, here are some historical articles: <a href="https://basex.notion.site/Carbon-Credit-Markets-94abec41f8b34a2889cafd3fbc84c76c?pvs=4">carbon credit standards</a>, <a href="https://basex.notion.site/Statement-on-carbon-offsetting-97314bf03969419381ef60134f43377b?pvs=4">offseting</a>, <a href="https://basex.notion.site/Statement-on-recycling-f7ca825519a04b9e9a843db8b3e1c421?pvs=4">recycling</a>, <a href="https://basex.notion.site/Statement-on-blockchain-crypto-Ethereum-Bitcoin-09266da877a443948887ecde702139e1?pvs=4">energy use</a>...</p>
+
+				<p>Regen 3-letter agencies are better that the old system. IEF sends words of apprecaitiogn towards CCN (<a href="https://climatecoordination.org/">Climate Coordination Network</a>) and LGD (<a href="https://www.letsgrow.network/">Lets's Grow DAO</a>) hosting 24/7 Twitter space during GG21. Thank you for organising! </p>
 			
 			</header>
 
