--- a/grant/index.html
+++ b/grant/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta http-equiv="refresh" content="0; url=https://explorer.gitcoin.co/#/round/42161/388/70">
+  <!-- <meta http-equiv="refresh" content="0; url=https://explorer.gitcoin.co/#/round/42161/388/70"> -->
 
-  <meta property="og:title" content="GG21 Impact Evaluation Foundation"/>
+  <title>Impact Evaluation Foundation (IEF): please support our grant 💰</title>
+
+  <meta property="og:title" content="Impact Evaluation Foundation (IEF)"/>
   <meta property="og:image" content="../preview.jpg""/>
-  <meta property="og:site_name" content="Please support our GG21 grant 💰"/>
+  <meta property="og:site_name" content="Please support our grant 💰"/>
   <meta property="og:description" content="Meeting place for all the things impact / climate / economy / externalities / cobenefits / full cost of the products."/>
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@ImpactEvalFDN">
   <meta name="twitter:creator" content="@marsXrobertson">
-  <meta name="twitter:title" content="GG21 Impact Evaluation Foundation: please support our grant 💰">
+  <meta name="twitter:title" content="Impact Evaluation Foundation (IEF): please support our grant 💰">
   <meta name="twitter:description" content="Meeting place for all the things impact / climate / economy / externalities / cobenefits / full cost of the products.">
   <meta name="twitter:image" content="../preview.jpg">
+
+  <script type="text/javascript">
+    window.location.replace("https://explorer.gitcoin.co/#/round/42161/388/70");
+  </script>
 
  </head>
  <body>
