Better preview image

--- a/grant/index.html
+++ b/grant/index.html
@@ -6,16 +6,16 @@
   <title>Impact Evaluation Foundation (IEF): please support our grant 💰</title>
 
   <meta property="og:title" content="Impact Evaluation Foundation (IEF)"/>
-  <meta property="og:image" content="../preview.jpg""/>
-  <meta property="og:site_name" content="Please support our grant 💰"/>
-  <meta property="og:description" content="Meeting place for all the things impact / climate / economy / externalities / cobenefits / full cost of the products."/>
+  <meta property="og:image" content="../preview-grant.jpg""/>
+  <meta property="og:site_name" content=""/>
+  <meta property="og:description" content="Meeting place for all the things impact / externalities / cobenefits"/>
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@ImpactEvalFDN">
   <meta name="twitter:creator" content="@marsXrobertson">
-  <meta name="twitter:title" content="Impact Evaluation Foundation (IEF): please support our grant 💰">
-  <meta name="twitter:description" content="Meeting place for all the things impact / climate / economy / externalities / cobenefits / full cost of the products.">
-  <meta name="twitter:image" content="../preview.jpg">
+  <meta name="twitter:title" content="Impact Evaluation Foundation (IEF)">
+  <meta name="twitter:description" content="Meeting place for all the things impact / externalities / cobenefits">
+  <meta name="twitter:image" content="../preview-grant.jpg">
 
   <script type="text/javascript">
     window.location.replace("https://explorer.gitcoin.co/#/round/42161/388/70");
